优化文件名

--- a/html/payOrder.html
+++ b/html/payOrder.html
@@ -117,7 +117,6 @@
  <script src="../js/libs/flexible.js"></script>
  <script src="../js/libs/store.js"></script>
 <script src="../js/common.js"></script>
-<script src="../js/playOrder.js"></script>
-<!--<script src="../playOrderTest.js"></script>-->
+<script src="../js/payOrder.js"></script>
 </body>
 </html>
