--- a/html/result.html
+++ b/html/result.html
@@ -1,12 +1,14 @@
 <!Doctype html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="format-detection" content="telephone=no,email=no">
-<link rel="stylesheet" type="text/css" href="../css/reset.css">
-<link rel="stylesheet" type="text/css" href="../css/main.css">
-<title>支付成功</title>
+	<meta charset="UTF-8">
+	<meta name="format-detection" content="telephone=no,email=no">
+	<link rel="stylesheet" type="text/css" href="../css/reset.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<title>支付成功</title>
 </head>
+
 <body id="pay_sucess" class="wrapper">
 	<div class="pay_banner">
 		<div class="pay_bannertxt"></div>
@@ -17,10 +19,19 @@
 				<div id="home"><a href="index.html">好邻居</a></div>
 			</div>
 			<ul id="pay_order">
-				
+				<li v-for="item in shopList">
+					<div class="shopping_img"><a :href="`detail.html?productId=${item.productId}`"><img :src="item.imgUrl"></a></div>
+								<div class="shopping_box">
+										<h2>{{ item.shopName }}</h2>
+										<div class="shopping_box_bottom">
+												<div class="unit_price">￥<span>{{ item.price }}</span></div>
+												<div class="number">x<span>{{ item.num }}</span></div>
+										</div>
+								</div>
+				</li>
 			</ul>
 			<div class="container">
-				<div class="container_left">订单号:<span id="id_pay_order"></span></div>
+				<div class="container_left">订单号:<span id="id_pay_order">{{payInfo.orderNum}}</span></div>
 				<div class="container_right">
 					<div id="goto_order_btn"><a href="#">查看订单</a></div>
 				</div>
@@ -31,31 +42,13 @@
 			<a href="home.html">返回首页</a>
 		</div>
 	</div>
-	
-	<script type="text/template" id="tpl">
-		
-		<%
-			_.each(list, function(item){
-		%>
-		<li>
-			<div class="shopping_img"><a href="detail.html?id=<%= item.id %>"><img src="<%= item.img %>"></a></div>
-            <div class="shopping_box">
-                <h2><%= item.shopName %></h2>
-                <div class="shopping_box_bottom">
-                    <div class="unit_price">￥<span><%= item.price %></span></div>
-                    <div class="number">x<span><%= item.prdNum %></span></div>
-                </div>
-            </div>
-		</li>
-		<%
-			})
-		%>
-	</script>
-	    <script src="../js/libs/zepto.js"></script>
- <script src="../js/libs/underscore.js"></script>
- <script src="../js/libs/flexible.js"></script>
- <script src="../js/libs/store.js"></script>
-<script src="../js/common.js"></script>
-<script src="../js/result.js"></script>
+
+	<script src="../js/libs/zepto.js"></script>
+    <script src="../js/libs/vue.js"></script>
+		<script src="../js/libs/flexible.js"></script>
+	<script src="../js/libs/store.js"></script>
+	<script src="../js/common.js"></script>
+	<script src="../js/result.js"></script>
 </body>
+
 </html>
