优化立即购买的逻辑

--- a/html/payIndex.html
+++ b/html/payIndex.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="container">
 					<div class="container_left">优惠券折扣</div>
-					<div class="container_right">￥<span id="order_coupons">{{payInfo.discount.money}}</span></div>
+					<div class="container_right">￥<span id="order_coupons">{{payInfo.discount.money || 0}}</span></div>
 				</div>
 				<div class="container fontcolor">
 					<div class="container_left">还需支付</div>
