--- a/html/home.html
+++ b/html/home.html
@@ -106,6 +106,11 @@
                 <h2>已成功加入购物车!</h2>
             </div>
         </div>
+        <div class="pop_wrapper" v-show="hasGet" id="hasGet" @click="hasGet = false">
+            <div class="pop_con">
+                <h2>优惠券领取成功!</h2>
+            </div>
+        </div>
     </div>
   
     <script src="../js/libs/zepto.js"></script>
